--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,6 +35,8 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v4
+      - name: Normalize image owner
+        run: echo "IMAGE_OWNER=${GITHUB_REPOSITORY_OWNER,,}" >> "$GITHUB_ENV"
       - uses: docker/setup-buildx-action@v3
       - uses: docker/login-action@v3
         with:
@@ -47,18 +49,18 @@ jobs:
           context: .
           file: src/RadioPulse.Api/Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/radiopulse-api:latest
+          tags: ghcr.io/${{ env.IMAGE_OWNER }}/radiopulse-api:latest
       - name: Build and Push Web
         uses: docker/build-push-action@v6
         with:
           context: .
           file: src/RadioPulse.Web/Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/radiopulse-web:latest
+          tags: ghcr.io/${{ env.IMAGE_OWNER }}/radiopulse-web:latest
       - name: Build and Push Worker
         uses: docker/build-push-action@v6
         with:
           context: .
           file: src/RadioPulse.Worker/Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/radiopulse-worker:latest
+          tags: ghcr.io/${{ env.IMAGE_OWNER }}/radiopulse-worker:latest
